// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: DateRangePicker ui no errors: Component: DateRangePicker => ui => no errors 1`] = `
<Row
  className="date-range-picker "
  tag="div"
>
  <Col
    md="6"
    sm="12"
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    <DateTimeInput
      color="danger"
      dateFormat="YYYY-MM-DD"
      id="fromId"
      isDateAllowed={[Function]}
      label="From Date"
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Please enter a From date"
      timeFormat="HH:mm:ss"
      valid={false}
      value={2000-01-01T11:30:40.000Z}
    />
  </Col>
  <Col
    md="6"
    sm="12"
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    <DateTimeInput
      color="danger"
      dateFormat="YYYY-MM-DD"
      id="toId"
      isDateAllowed={[Function]}
      label="To Date"
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Please enter a To date"
      timeFormat="HH:mm:ss"
      valid={false}
      value={2010-01-01T11:30:40.000Z}
    />
  </Col>
  <Col
    className="mb-2"
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
    xs="12"
  />
</Row>
`;

exports[`Component: DateRangePicker ui with errors: Component: DateRangePicker => ui => with errors 1`] = `
<Row
  className="date-range-picker "
  tag="div"
>
  <Col
    md="6"
    sm="12"
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    <DateTimeInput
      color="danger"
      dateFormat="YYYY-MM-DD"
      id="fromId"
      isDateAllowed={[Function]}
      label="From Date"
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Please enter a From date"
      timeFormat="HH:mm:ss"
      valid={false}
      value={2200-01-01T11:30:40.000Z}
    />
  </Col>
  <Col
    md="6"
    sm="12"
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    <DateTimeInput
      color="danger"
      dateFormat="YYYY-MM-DD"
      id="toId"
      isDateAllowed={[Function]}
      label="To Date"
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Please enter a To date"
      timeFormat="HH:mm:ss"
      valid={false}
      value={2010-01-01T11:30:40.000Z}
    />
  </Col>
  <Col
    className="mb-2"
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
    xs="12"
  >
    <FormFeedback
      tag="div"
    >
      The "From Date" must be before the "To Date"
    </FormFeedback>
  </Col>
</Row>
`;
